<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trip Budget Calculator</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>

    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="loginfailed">Login failed</string>
    <string name="tours">Tours &amp; Sightseeing</string>
    <string name="theme_park">Theme &amp; Water Parks</string>
    <string name="beach">Beaches</string>
    <string name="day_trips">Day/Night Trips</string>
    <string name="water_tours">Cruises &amp; Sailing</string>
    <string name="shows">Shows &amp; Concerts</string>
    <string name="hillstation">Hill Station</string>
    <string name="food">Food &amp; Nightlife</string>
    <string name="top">Must Visit</string>
    <string name="recreational">Recreational Places</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="mode">Mode Of Transportation</string>
    <string-array name="modeOftransportation">
        <item>Select Mode of Transportation</item>
        <item>Car</item>
        <item>Flight</item>
        <item>Greyhound</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="google_sign_in_button_label">Google Sign In Button</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="log_in_label">Log In</string>
    <string name="log_out_label">Log Out</string>

    <string name="web_client_id" tools:ignore="TypographyDashes">592729828295-5pnk0c6dgs3vh1dejrviq76f4vehtdgi.apps.googleusercontent.com</string>
    <string name="places_as_your_budget_label">Places as your budget</string>
    <string name="amusement_label">AMUSEMENT</string>
    <string name="hill_station_label">HILL STATION</string>
    <string name="beaches_label">BEACHES</string>
    <string name="religious_label">RELIGIOUS</string>
    <string name="hiking_label">HIKING</string>
    <string name="historical_label">HISTORICAL</string>
    <string name="plan_your_budget_label">Plan your Budget</string>
    <string name="add_label">ADD</string>
    <string name="cancel_label">Cancel</string>
    <string name="round_trip_label">ROUND TRIP</string>
    <string name="choose_class_label">Choose Class</string>
    <string name="economy_label">Economy</string>
    <string name="premium_economy_label">Premium Eco</string>
    <string name="business_label">Business</string>
    <string name="first_class_label">First Class</string>
    <string name="next_label"><![CDATA[Next >]]></string>
    <string name="create_new_plan_label">Create New Plan</string>
    <string name="no_plans_found_label">No Plans Found</string>
    <string name="add_new_plane_action">Press + to add a new Plan</string>
    <string name="select_dates_label">Select Dates</string>
    <string name="done_label">Done</string>

    <string name="flight_price_empty">No available tickets</string>
    <string name="label_carriers">Carriers</string>
    <string name="label_min_price">Min. Price</string>
    <string name="label_error_in_retrieval">Error in retrieval</string>

    <string name="skyscanner_api_key">7373551c59msh43f6546f0df1e85p1b4120jsn0639fc85a529</string>
    <string name="url_browse_routes">https://skyscanner-skyscanner-flight-search-v1.p.rapidapi.com/apiservices/browseroutes/v1.0/CA/CAD/en-CA/</string>

    <string name="opentripmap_api_key">5ae2e3f221c38a28845f05b6cf1e0f31ffa8cb3147ccc90ea695e117</string>
    <string name="url_opentripmap">https://api.opentripmap.com/0.1/en/</string>


</resources>
